fix(dropdown): fix text truncate shortening words which don't need shortening
affects: @entur/dropdown

--- a/packages/dropdown/src/SearchableDropdown.scss
+++ b/packages/dropdown/src/SearchableDropdown.scss
@@ -12,4 +12,8 @@
   overflow-x: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+
+  &__wrapper {
+    max-width: 50%;
+  }
 }
